Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45631

QLockFile::lock() hang on windows if the file cannot be created

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 5.4.0
    • Core: I/O, QPA: Windows
    • None
    • Windows
    • 6545404afad30b60d1a8e9a2abaf301abaf8f6a5 (qtbase/5.5, 23.4.2015, 5.5)

    Description

      On windows, QLockFile::LockError QLockFilePrivate::tryLock_sys(); incorrectly returns LockFailedError instead of PermissionError.

      that in turns causes QLockFile::tryLock to never return, freezing the application.

      I observed the behaviour on several windows 7 and windows 8 machines. I encountered the bug while trying to call QSettings::sync() on an ini file stored in Program files.

      Attachments

        1. filetest.zip
          2 kB
        2. qtbug45631.zip
          1 kB
        For Gerrit Dashboard: QTBUG-45631
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            cor3ntin Corentin Jabot
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes