Windows: Fix QLockFile hanging when file cannot be created.

Return QLockFile::PermissionError when file does not exist, preventing
the stale file detection logic from triggering.

Add Windows-only autotest trying to create a lock file in
a system folder guarded with checks for elevated processes
and UAC virtualization.

Task-number: QTBUG-45631
Change-Id: I1790f8f925660f6bf1df94c2ced901e6ec57cbb0
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>

cregit: 6545404afad30b60d1a8e9a2abaf301abaf8f6a5 https://github.com/qt/qtbase/commit/6545404afad30b60d1a8e9a2abaf301abaf8f6a5