tests/auto/corelib/io/qlockfile/tst_qlockfile.pro
@@ -4,3 +4,4 @@ TARGET = tst_qlockfile
 SOURCES += tst_qlockfile.cpp
 
 QT = core testlib concurrent
+win32:!wince:!winrt:LIBS += -ladvapi32
